# jules

./: .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  conftest.py  docker-compose.debug.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  style-dictionary.config.js  work-order.md
.github/workflows/: dependency-audit.yml  no-legacy.yml  test.yml
backend/: Dockerfile  __init__.py  cli.py  memory.py  requirements.txt
backend/app/: checkpointer.py  config.py  config_agents.py  main.py  memory.py
backend/app/agents/: __init__.py  retrieval_agent.py
backend/app/graphs/: main_graph.py  next_gen.py
backend/app/prompts/: root.system.md
backend/app/routers/: chat.py  graph_runner.py
backend/app/schemas/: __init__.py  chat.py
backend/app/tools/: chroma_search.py
config/: agents.toml
db/: __init__.py  chroma.py  sqlite.py
docs/: ci-greenfield.md  graph_v6.md  index.md
docs/arch/: next_gen_graph.md  overview_rag.md
docs/architecture/: graph.md
docs/development/: debugging.md
docs/tools/: search_tool.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/.storybook/: main.js  preview.js
frontend/src/__tests__/: RetrievalInfo.test.tsx  infoPacketToggle.test.tsx  tokens.test.ts
frontend/src/components/: Chat.tsx  InfoPacketToggle.tsx  RetrievalInfo.tsx
frontend/src/context/: chat.ts
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/pages/Chat/: ChatWindow.tsx
frontend/src/stories/: Button.stories.tsx  Palette.stories.tsx
frontend/src/styles/: catppuccin-macchiato.css  catppuccin-macchiato.ts
importlinter_contracts/: greenfield.py
jules/: __init__.py  config.py  graph_v6.py  logging.py
jules/agents/: jules.py  retrieval.py
jules/tools/: __init__.py  search_tool.py
lint_contracts/: __init__.py  greenfield.py
prompts/: jules.txt  retrieval_agent.txt
scripts/: migrate_sqlite_to_chroma.py
src/design-tokens/: catppuccin-macchiato.json
src/jules/graph/: main_v6.py
src/styles/: catppuccin-macchiato.css  catppuccin-macchiato.ts
src/theme/: catppuccin.ts
tests/: conftest.py  test_api_v6.py  test_chat.py  test_chat_flow.py  test_chroma_integration.py  test_disable_v5_flag.py  test_env_flag.py  test_graph_v6.py  test_logging.py  test_memory.py  test_memory_persistence.py  test_memory_regression.py  test_need_search.py  test_no_legacy_patterns.py  test_thread_id_api.py  test_threads.py
tests/backend/: test_message_builder.py  test_retrieval_agent.py
tests/chroma/: test_chroma_save_search.py  test_mmr_dedup.py  test_save_real.py
tests/ci/: test_no_legacy.py  test_no_legacy_paths.py
tests/config/: test_search_settings.py
tests/db/: test_chroma_mmr.py
tests/graph/: test_retrieval_pipeline.py
tests/imports/: test_module_paths.py
tests/routers/: test_search.py  test_show_retrieval_flag.py
tests/tools/: test_search_tool.py
worker/: __main__.py  cli.py
