[tool.poetry]
name = "jules"
version = "1.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"

# Alphabetically ordered for easier diffing & maintenance
aiohttp = "3.12.14"
chromadb = "==0.5.23"
fastapi = "0.116.1"
httpx = "0.27.0"
langchain = "0.3.26"
langgraph = "0.3.*"
# Align with langchain-openai requirement (>=0.7,<1)
tiktoken = "0.7.0"
tomli = "2.0.1"
langchain-openai = "0.3.28"
langgraph-checkpoint-sqlite = "2.0.10"
pydantic-settings = "2.10.1"
python-dotenv = "1.0.1"
setuptools = "78.1.1"
sse-starlette = "1.6.1"
starlette = "0.47.2"
uvicorn = {version = "0.29.0", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
pip-audit = "2.7.1"
pre-commit = "4.2.0"
pytest = "8.2.2"
import-linter = "1.11.1"
pytest-docker = "3.1.1"
respx = "0.21.1"

[tool.importlinter]
contracts = ["lint_contracts.greenfield:Contract"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


# ---------------------------------------------------------------------------
# Ruff – fast Python linter
# ---------------------------------------------------------------------------

[tool.ruff]
exclude = [
    "docs/*",
    "notebook/*",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = "(?x)(^tests/|^db/|^backend/app/(routers|graphs|agents)/|^backend/app/checkpointer.py|^lint_contracts/)"
follow_imports = "skip"
